<resources>
    <string name="app_name">CPC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="second_view">Second View</string>
    <string name="button">Button</string>
    <string name="app_2">App 2</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">There are older traces of a religious settlement here but Presbyterian worship here dates from the middle of the 17th century. In March 1658 a Mr Robert Dewart is reported as being on “trials” at that date and as being ordained soon after. Like many others he was deposed in 1661 and his work here ended. The Rev Thomas Gowan of Glasslough supplied the congregation, without being installed, from 1667 to 1671, and then Mr David Cunningham (lic. Antrim 1671) a Scot, entered on trials in August 1671. He was acceptable and was licensed in October 1671, but on account of the intolerance of the period, a public ordination was not attempted.  He was, in consequence, ordained privately at Cairncastle on 27 March 1672 with Rev. Patrick Image 50Adair presiding.  For Mr. Cunningham to preach at Connor was also judged injudicious, so he went to Scotland for some months.  He returned in July 1672 and the elders on behalf of the congregation received him as their minister.  Their welcome was apparently not as practical as it might have been for in February 1674 it was reported that though “their kindness and dutifulness to their minister was considerable, their quota came not altogether up to their expectation”.  Even by 1688 we find their elder, Mr. James Brown, promising the Presbytery that they “would bestir themselves to get up arrears due to Mr. Cunningham, when victual came into their hands”.</string>
    <string name="use_the_map_below_for_more_information">Use the map below for more information!</string>
    <string name="connor_presbyterian_church">Connor Presbyterian Church</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_connor_presbyterian_church">Welcome to Connor Presbyterian Church</string>
    <string name="find_us">Find us</string>
    <string name="contact_us">Contact us</string>
    <string name="back">Back</string>
    <string name="welcome_to_connor_presbyterian_church_s_app_in_connor_our_goal_is_to_see_unbelieving_people_to_be_lifelong_followers_of_jesus_christ_in_our_church_we_have_many_things_going_on_we_look_forward_to_greeting_you_when_you_come_and_visit_us">Welcome to Connor Presbyterian Church\'s app. In Connor our goal is to see unbelieving people to be lifelong followers of Jesus Christ. In our church we have many things going on. We look forward to greeting you when you come and visit us.</string>
    <string name="textview">TextView</string>
    <string name="he_was_acceptable_and_was_licensed_in_october_1671_but_on_account_of_the_intolerance_of_the_period_a_public_ordination_was_not_attempted_he_was_in_consequence_ordained_privately_at_cairncastle_on_27_march_1672_with_rev_patrick_image_50adair_presiding_for_mr_cunningham_to_preach_at_connor_was_also_judged_injudicious_so_he_went_to_scotland_for_some_months_he_returned_in_july_1672_and_the_elders_on_behalf_of_the_congregation_received_him_as_their_minister_their_welcome_was_apparently_not_as_practical_as_it_might_have_been_for_in_february_1674_it_was_reported_that_though_their_kindness_and_dutifulness_to_their_minister_was_considerable_their_quota_came_not_altogether_up_to_their_expectation_even_by_1688_we_find_their_elder_mr_james_brown_promising_the_presbytery_that_they_would_bestir_themselves_to_get_up_arrears_due_to_mr_cunningham_when_victual_came_into_their_hands">He was acceptable and was licensed in October 1671, but on account of the intolerance of the period, a public ordination was not attempted. He was, in consequence, ordained privately at Cairncastle on 27 March 1672 with Rev. Patrick Image 50Adair presiding. For Mr. Cunningham to preach at Connor was also judged injudicious, so he went to Scotland for some months. He returned in July 1672 and the elders on behalf of the congregation received him as their minister. Their welcome was apparently not as practical as it might have been for in February 1674 it was reported that though “their kindness and dutifulness to their minister was considerable, their quota came not altogether up to their expectation”. Even by 1688 we find their elder, Mr. James Brown, promising the Presbytery that they “would bestir themselves to get up arrears due to Mr. Cunningham, when victual came into their hands”.</string>
    <string name="look_through_the_calendar_to_find_an_event">Look through the calendar to find an event.</string>
    <string name="no_internet_connection_available">No internet connection available!</string>
    <string name="lt_current_position"><![CDATA[<Current Position>]]></string>
    <string name="lt_max_time"><![CDATA[<Max Time>]]></string>
    <string name="select_a_sermon_from_below">Select a sermon from below:</string>
    <string name="calendar">calendar</string>
    <string name="sermons">sermons</string>
    <string name="go_back">go back</string>
    <string name="feel_free_to_email_me_with_any_questions_or_with_regards_to_any_technical_issues_with_the_app">Feel free to email me with any questions, or with regards to any technical issues with the app!</string>
    <string name="author_james_mcconnell">Author: James McConnell</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="copyright_2018_james_mcconnell">Copyright © 2018 James McConnell</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="email_james_mcc90_gmail_com">Email: james.mcc90@gmail.com</string>
    <string name="listen_to_sermons_talks_from_connor_presbyterian">Listen to sermons/talks from Connor Presbyterian.</string>
    <string name="listen_to_our_sermons_talks_below">Listen to our sermons/talks below.</string>
    <string name="feel_free_to_message_me_with_any_questions_or_queries_relating_to_the_app">Feel free to message me with any questions or queries relating to the app!</string>
    <string name="sermon_name">Sermon name</string>
    <string name="speaker">Speaker</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="contact_info">"Please get in contact with us if you have any questions."
        "You can fill out the contact form below or if you would prefer send us a email to info@connorpresbyterianchurch.org"</string>
    <string name="contact_name">Your Name</string>
    <string name="contact_email">Your Email</string>
    <string name="contact_subject">Subject</string>
    <string name="contact_message">Your Message</string>
<string name="philip_message">
    I love being part of the Church family in Connor because this is a church that really cares about people. Lots of members give of their time to serve Jesus and their community. We do this because we believe what Jesus said about himself: \n "\n "\"I am the Way, the Truth and the Life. No one comes to the Father except through me."\" (John 14:6)
    "\nWe would love to help you discover this truth about Jesus. If you want to find out more about this good news, please contact us or call in."

</string>
    <string name="pw">
        "Presbyterian Women (PW) is an organisation for women within the Presbyterian Church in Ireland (PCI).

"There have been women’s organisations within PCI for over 130 years. PW incorporates the former Presbyterian Women’s Association and the former Young Women’s Groups with a total membership of around 14,000 within 500 groups. PW Groups are envisaged as women’s fellowships in which women are encouraged to become Christians and to become Christ-like. In addition to supporting mission at home and overseas, each group is to seek ways of actively reaching women in its own area for Christ."

"Motto: Living for Jesus"

"Logo: The circle around the cross represents women whose lives are centred on the Lord Jesus Christ."

"Mission Statement and Aims:"
Presbyterian Women encourages women to become disciples of Christ.

Presbyterian Women aims to highlight the need for:

1. Love and unity
2. Obedience to God
3. Christian living and spiritual maturity
4. Service using gifts, time and money
5. Local and global mission

    </string>
    <string name="what_s_on">what\'s on</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This app has been developed by James McConnell.</string>
    <string name="app_version">1.0.0</string>
    <string name="summary_support">For any queries, issues, or suggestions relating to the app.</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_version">Version</string>
    <string name="title_new_notification_sound">Verse of the Day notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="presbyterian_women">Presbyterian Women</string>
</resources>