<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.connorchurch.james.churchapp.activities.NavigationDrawerActivity"
    tools:layout_editor_absoluteY="25dp">


    <Button
        android:id="@+id/btnWhatsOn"
        android:layout_width="210dp"
        android:layout_height="256dp"
        android:background="@drawable/connor_presbyterian"
        android:text="@string/what_s_on"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSermons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSermons"
        app:layout_constraintTop_toTopOf="@+id/btnSermons"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/btnSermons"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/church3"
        android:text="@string/sermons"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnWhatsOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="0dp"
        android:layout_height="167dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/church1"
        android:text="@string/about_us"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSermons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnFindUs"
        android:layout_width="416dp"
        android:layout_height="196dp"
        android:background="@drawable/church2"
        android:text="@string/find_us"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnWhatsOn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSermons" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="168dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/btnSermons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1E73BE"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

</android.support.constraint.ConstraintLayout>